[package]
authors = ["Shohei Jinno <shohei.jinno@gmail.com>"]
edition = "2018"
name = "puppy-notifier"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
reqwest = "0.11"
scraper = "0.12"
tokio = {version = "1.0", default-features = false, features = ["macros", "rt-multi-thread"]}
